make it work to create flow
